<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_account_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:clipToPadding="false"
    tools:context=".view.tabs.UserAccountPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/user_profile_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/material_green_500"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:elevation="12dp"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:id="@+id/user_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:contentDescription="@string/profile_picture_content_desc"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_anon_user_48dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/user_account_favorsCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_create_black_24dp"
            android:drawablePadding="20dp"
            android:padding="15dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_account_favorsAccepted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_accepted_black_24dp"
            android:drawablePadding="20dp"
            android:padding="15dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_account_favorsCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_completed_black_24dp"
            android:drawablePadding="20dp"
            android:padding="15dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/user_account_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_like_black_24dp"
                android:drawablePadding="20dp"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/user_account_dislikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_dislike_black_24dp"
                android:drawablePadding="20dp"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/sign_out"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/sign_out"
            android:textSize="16sp" />

        <Button
            android:id="@+id/edit_profile_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/edit_profile"
            android:textSize="16sp" />

        <Button
            android:id="@+id/delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/delete_account_label"
            android:textSize="16sp"
            android:theme="@style/WarnButton" />

    </LinearLayout>

</ScrollView>