...
        android:text="@string/change_profile_picture_title"
        android:textStyle="bold"
        android:textColor="@color/material_purple_a700"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/new_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
...
        android:text="@string/change_display_name_title"
        android:textStyle="bold"
        android:textColor="@color/material_purple_a700"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/change_name_dialog_user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        app:backgroundTint="@color/material_green_500"
        android:textCursorDrawable="@drawable/green_cursor">
...
