<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_face_24px"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shop_black_24dp"
            android:title="@string/shop" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share" />
        </menu>
    </item>

</menu>